--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@nuxt/ui": "^3.0.2",
-    "@speckle/viewer": "^2.23.16",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@speckle/viewer": "^2.23.23",
     "nuxt": "^3.16.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6"
   }
 }
